Visibility fixed

--- a/styles.css
+++ b/styles.css
@@ -19,20 +19,13 @@ body{
 @media only screen and (max-width: 600px) {
     .container{
         visibility: hidden;
+        display: none;
     }
     .sm-container{
         height: 100vh;
         width: 100%;
-        margin: 0 auto;
-    }
-    .sm{
-        visibility: hidden;
-    }
-    .grid{
-        display: none;
-    }
-    .grid-cases{
-        grid-template-columns: 0% 0%
+        margin-top: -100vh;
+        visibility: visible;
     }
 } 
 @media only screen and (min-width: 600px) {
@@ -53,6 +46,7 @@ body{
         height: 100vh;
         width: 80%;
         margin: 0vh auto;
+        visibility: visible;
     }
 }
 @media only screen and (min-width: 992px) {
@@ -63,6 +57,7 @@ body{
         height: 100vh;
         width: 75%;
         margin: 0vh auto;
+        visibility: visible;
     }
 }
 @media only screen and (min-width: 1200px) {
@@ -73,6 +68,7 @@ body{
         height: 100vh;
         width: 65%;
         margin: 0vh auto;
+        visibility: visible;
         /* align-items: center; */
     }
 } 
